--- a/css/styles.css
+++ b/css/styles.css
@@ -172,4 +172,50 @@ select {
 select::-ms-expand {
   display: none;
 }
+
+@media screen and (min-width: 768px) {
+  .x-t9-bp-0001 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+.x-t9-pb-0001_padding {
+  display: block;
+  background: rgb(255, 105, 180);
+}
+@media screen and (min-width: 768px) {
+  .x-t9-pb-0001_padding {
+    width: 50%;
+    padding-top: 33.3%;
+    position: relative;
+    overflow: hidden;
+  }
+}
+
+.x-t9-bp-0001_wrapper {
+  display: block;
+  padding: 10px;
+  padding: 0.625rem;
+}
+@media screen and (min-width: 768px) {
+  .x-t9-bp-0001_wrapper {
+    position: absolute;
+    top: 50%;
+    left: 0%;
+    -webkit-transform: translatey(-50%);
+            transform: translatey(-50%);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .x-t9-bp-0001 figure {
+    display: block;
+    width: 50%;
+  }
+}
 /*# sourceMappingURL=styles.css.map */
